--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "dhcpjs": "^0.2.0",
-    "node-macaddress": "^0.2.4"
+    "macaddress": "^0.2.8"
   }
 }
